// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowCalculation matches snapshot when canEditExpenses is false 1`] = `
<div>
  <h1>
    My calculation
  </h1>
  <p>
    Blabla
  </p>
  <h2>
    Matrix
  </h2>
  <Component
    elements={Object {}}
    members={
      Object {
        "1": Object {
          "id": 1,
          "name": "A guy",
        },
        "2": Object {
          "id": 2,
          "name": "Another guy",
        },
      }
    }
  />
  <h2>
    Expenses
  </h2>
  <Component
    expenses={
      Object {
        "1": Object {
          "amount": 999,
          "description": "Expense 1",
          "id": 1,
          "paid_at": "2017-11-11",
        },
        "2": Object {
          "amount": 1599,
          "description": "Expense 2",
          "id": 2,
          "paid_at": "2016-12-08",
        },
      }
    }
  />
</div>
`;

exports[`ShowCalculation matches snapshot when canEditExpenses is true 1`] = `
<div>
  <h1>
    My calculation
  </h1>
  <p>
    Blabla
  </p>
  <h2>
    Matrix
  </h2>
  <Component
    elements={Object {}}
    members={
      Object {
        "1": Object {
          "id": 1,
          "name": "A guy",
        },
        "2": Object {
          "id": 2,
          "name": "Another guy",
        },
      }
    }
  />
  <h2>
    Expenses
  </h2>
  <ExpenseForm
    handleSubmit={[Function]}
    members={
      Object {
        "1": Object {
          "id": 1,
          "name": "A guy",
        },
        "2": Object {
          "id": 2,
          "name": "Another guy",
        },
      }
    }
  />
  <Component
    expenses={
      Object {
        "1": Object {
          "amount": 999,
          "description": "Expense 1",
          "id": 1,
          "paid_at": "2017-11-11",
        },
        "2": Object {
          "amount": 1599,
          "description": "Expense 2",
          "id": 2,
          "paid_at": "2016-12-08",
        },
      }
    }
  />
</div>
`;
